Bugfix: bad padding on mobile pages

--- a/client/css/_column.scss
+++ b/client/css/_column.scss
@@ -58,6 +58,7 @@
     width: 100%;
 
     .column {
+      padding: 0;
       width: 100%;
 
       .column-1-2 {
